[package]
name = "swc-plugin-auto-css-module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
serde_json = { version = "1.0.117", features = ["preserve_order"] }
swc_core = { version = "0.95.*", features = ["ecma_plugin_transform"] }
swc_common = { version = "0.34.3", features = ["concurrent"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
